# gemini-pool-proxy

./: .env.example  .gitignore  LICENSE  README.md  README_ZH.md  docker-compose.yml  setup.sh  start-desktop.sh  start-headless.sh
core-rs/: .env.example  Cargo.toml  README.md  start-gateway-server.sh
core-rs/crates/config-secure/: Cargo.toml
core-rs/crates/config-secure/src/: lib.rs  provider.rs  secure_store.rs
core-rs/crates/gateway-core/: Cargo.toml
core-rs/crates/gateway-core/src/: app_state.rs  key_pool.rs  lib.rs  types.rs
core-rs/crates/gateway-server/: Cargo.toml
core-rs/crates/gateway-server/src/: adapters.rs  auth.rs  config.rs  lib.rs  main.rs  routes.rs  state.rs
desktop/tauri-app/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/tauri-app/scripts/: tauri-with-rustup-stable.sh
desktop/tauri-app/src/: App.tsx  main.tsx  styles.css
desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-app/src-tauri/src/: main.rs
docs/: architecture-zh.md  architecture.md  beginner-guide-zh.md  beginner-guide.md  configuration-zh.md  configuration.md  hermes-openclaw-setup-quickstart.md  hermes-openclaw-setup-zh.md  hermes-openclaw-setup.md  model-access-verification-2026-04-22.md  per-key-cycle-verification-2026-04-20.md  unified-api-standard-zh.md
docs/superpowers/plans/: 2026-04-22-go-wails-phase1-implementation-plan.md  2026-04-22-go-wails-phase2-implementation-plan.md  2026-04-22-go-wails-phase3-priority1-implementation-plan.md
docs/superpowers/specs/: 2026-04-22-go-wails-migration-design.md
go-wails/: .dockerignore  API_COMPAT_GAPS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  RELEASE_NOTES.md  go.mod  go.sum
go-wails/cmd/server/: main.go
go-wails/cmd/wails/: main.go
go-wails/internal/admin/: handler.go  handler_test.go  session.go
go-wails/internal/auth/: token.go  token_test.go
go-wails/internal/config/: config.go  config_test.go  save.go  save_test.go
go-wails/internal/keypool/: pool.go  pool_test.go
go-wails/internal/metrics/: store.go  store_test.go
go-wails/internal/modelpool/: pool.go  pool_test.go
go-wails/internal/proxy/: client.go  handler.go  handler_test.go
go-wails/internal/runtime/: manager.go  manager_test.go
go-wails/internal/server/: router.go
go-wails/scripts/: smoke-phase1.sh  smoke-phase2.sh
scripts/: docker-smoke-api.sh  headless-verify-per-key-cycle.sh  quick-verify-api.sh  verify-per-key-cycle.sh
(+21 files in other folders)
