[workspace]
members = [
  "crates/gateway-core",
  "crates/gateway-server",
  "crates/config-secure"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
aes-gcm = "0.10"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
keyring = { version = "3", features = ["apple-native"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "process"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
bytes = "1"
