[package]
name = "config-secure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
keyring.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
