[package]
name = "gateway-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
gateway-core = { path = "../gateway-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
reqwest.workspace = true
futures-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
