[package]
name = "gemini-balance-desktop"
version = "0.1.0"
description = "Gemini Balance Desktop (macOS)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
config-secure = { path = "../../../core-rs/crates/config-secure" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"

